--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
+
+<!DOCTYPE html>
+
 <html>
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tienda Semana 2</title>
+        <link href="css/css.css" rel="stylesheet" type="css/css" />
     </head>
     <body>
-        <div>TODO write content</div>
+        <header style="background-color:#6600cc"><h1>Header</h1></header>
+        <nav>
+            <a href="url">Martillos</a><br/>
+            <a href="url">Tornillos</a><br/>
+            <a href="url">Soldadura</a><br/>
+            <a href="url">Pintura</a><br/>
+        </nav>
+        <section>
+            <h3 style="background-color:#ff3333">Martillo</h3>
+            <p>La <strong>ferretería</strong> queda en <em>Alajuela</em>, la fachada es azul con morado y los dueños son Juan y Paco</p>
+            <figure>
+                <img src="Imagenes/Martillo.jpg" alt="Martillo" width="150"/>
+            </figure>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec neque ultrices, fermentum nunc sed, consequat nunc. 
+                In vel quam consequat, tincidunt ipsum quis, venenatis ipsum. Nam rhoncus non sapien non volutpat. Mauris sem felis, iaculis id diam ac, fermentum accumsan eros. 
+                Pellentesque mattis malesuada odio, eu feugiat nibh iaculis quis. Sed convallis consequat nisl, sit amet semper mauris rhoncus tincidunt. Nullam ante magna, varius iaculis suscipit at, tincidunt ac est.
+                <br/>
+                <br/>
+                Phasellus tempor metus et vulputate ullamcorper. Pellentesque egestas rutrum justo nec pulvinar. Sed congue pulvinar gravida. 
+                Ut vitae varius augue, sed fringilla enim. Quisque viverra ultrices felis non feugiat. Cras venenatis leo neque, laoreet bibendum eros iaculis nec. 
+                Praesent sed consectetur metus. Suspendisse tincidunt lacus vitae bibendum faucibus. Pellentesque eget justo interdum, ullamcorper dui eu, ultrices leo. 
+                Praesent tempus non diam id placerat. Nam tempor molestie semper. 
+            </p> 
+        </section>
+        <aside><h2>Novedades</h2></aside>
+        <footer>Eso fue todo!</footer>
     </body>
 </html>
