--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 
-<!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="UTF-8">
         <title>Tienda Semana 2</title>
-        <link href="css/css.css" rel="stylesheet" type="css/css" />
+        <link href="css/css.css" rel="stylesheet" />
     </head>
     <body>
-        <header style="background-color:#6600cc"><h1>Header</h1></header>
-        <nav>
-            <a href="url">Martillos</a><br/>
-            <a href="url">Tornillos</a><br/>
-            <a href="url">Soldadura</a><br/>
-            <a href="url">Pintura</a><br/>
-        </nav>
+        <header style="background-color:#6633ff"><h1>Tienda de Juan D</h1>
+            <nav>
+                <a href="Home.html">Home</a>
+                <a href="Formulario.html">Formulario</a>
+                <a href="SobreNosotros.html">Sobre nosotros</a>
+                <a href="Productos.html">Productos</a>
+                <a href="Novedades.html">Novedades</a>
+                <a href="Video.html">Video</a>
+                <a href="Audio.html">Audio</a>
+            </nav>
+        </header>
+
+        <aside><h2>Novedades</h2>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec neque ultrices, fermentum nunc sed, consequat nunc. 
+            In vel quam consequat, tincidunt ipsum quis, venenatis ipsum. Nam rhoncus non sapien non volutpat. Mauris sem felis, iaculis id diam ac, fermentum accumsan eros. 
+            Pellentesque mattis malesuada odio, eu feugiat nibh iaculis quis. Sed convallis consequat nisl, sit amet semper mauris rhoncus tincidunt. Nullam ante magna, varius iaculis suscipit at, tincidunt ac est.
+        </aside>
+
         <section>
             <h3 style="background-color:#ff3333">Martillo</h3>
             <p>La <strong>ferretería</strong> queda en <em>Alajuela</em>, la fachada es azul con morado y los dueños son Juan y Paco</p>
@@ -34,7 +43,6 @@
                 Praesent tempus non diam id placerat. Nam tempor molestie semper. 
             </p> 
         </section>
-        <aside><h2>Novedades</h2></aside>
         <footer>Eso fue todo!</footer>
     </body>
 </html>
